--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "p-try": "^1.0.0",
-    "puppeteer": "^1.3.0",
     "shorthash": "0.0.2",
-    "tmp": "0.0.33",
-    "yargs": "^11.0.0"
+    "yargs": "^11.0.0",
+    "ynab": "^0.16.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
